--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
- <p>Html es el lenguaje que le da sentido y estructura a</p>
+ <p>Html es el lenguaje que le da sentido y estructura</p>
 </body>
 </html>
