--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>El Blog de Junior</title>
   </head>
+
   <body>
     <header>
-      <h4>CONTENIDO</h4>
+      <h4 style="border: 1px solid red;" >CONTENIDO</h4>
       <nav>
-        <details>
+        <details open>
           <summary>Setup</summary>
           <ol>
-            <li>Google Chrome</li>
-            <li>Visual Code</li>
-            <li>Figma</li>
-            <li>GitHub</li>
+            <li><a href="#google-chrome">Google Chrome</a></li>
+            <li><a href="#visual-code">Visual Code</a></li>
+            <li><a href="#figma">Figma</a></li>
+            <li><a href="#github">GitHub</a></li>
           </ol>
         </details>
 
         <details>
           <summary>Conceptos esenciales del Desarrollo Web</summary>
           <ol>
-            <li>Qué es HTML</li>
-            <li>Etiquetas</li>
-            <li>DOML</li>
-            <li>Semántica</li>
-            <li>Atributos</li>
-            <li>Qué es CSS</li>
+            <li><a href="#html">Qué es HTML</a></li>
+            <li><a href="#etiquetas">Etiquetas</a> </li>
+            <li><a href="#dom">DOM</a> </li>
+            <li><a href="#semantica">Semántica</a></li>
+            <li><a href="#atributos">Atributos</a></li>
+            <li><a href="#css">Qué es CSS</a></li>
           </ol>
         </details>
       </nav>
@@ -44,7 +46,8 @@
     <h2>Setup</h2>
 
     <img
-      src="./images/google-chrome.png"
+      id="google-chrome"
+      src="/images/google-chrome.png"
       alt="Logo de Google Chrome"
       title="Logo de Google Chrome"
     />
@@ -57,7 +60,8 @@
   </body>
 
   <img
-    src="./images/visual-studio-code.png"
+    id="visual-code"
+    src="/images/visual-studio-code.png"
     alt="Logo de Visual Studio Code"
     title="Logo de Visual Studio Code"
   />
@@ -69,7 +73,11 @@
     lenguaje en el que se desemvuelva.
   </p>
 
-  <img src="./images/figma.png" alt="Logo de Figma" title="Logo de Figma" />
+  <img 
+    id="figma"
+    src="/images/figma.png"
+    alt="Logo de Figma"
+    title="Logo de Figma" />
   <h3>Figma</h3>
   <p>
     Figma es una la herramienta más popular en la actualidad para entregar
@@ -77,7 +85,10 @@
     puede ser usado directamente desde el navegador.
   </p>
 
-  <img src="./images/github.png" alt="Logo de gitHub" title="Logo de gitHub" />
+  <img id="github"
+    src="/images/github.png"
+    alt="Logo de gitHub"
+    title="Logo de gitHub" />
   <h3>GitHub</h3>
   <p>
     Así como en Facebook te encuentran tus amigos, en Github te encuentran otras
@@ -91,13 +102,27 @@
 
   <h2>Conceptos esenciales del Desarrollo Web</h2>
 
-  <h3>Qué es HTML</h3>
+  <h3 id="html" >Qué es HTML</h3>
   <p>
     Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente
     más básico de la web. Define el significado y la estructura del contenido.
   </p>
 
-  <h3>Etiquetas</h3>
+  <code>const name = "Your Name"</code>
+  <pre>
+&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;en&quot;&gt;
+&lt;head&gt;
+&lt;meta charset=&quot;UTF-8&quot;&gt;
+&lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+&lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+  </pre>
+
+  <h3 id="etiquetas" >Etiquetas</h3>
   <p>
     Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al
     contenido de nuestro website y cada una tiene características y usos
@@ -111,7 +136,7 @@
     importantes y que serán parte de tu día a día como Software Developer.
   </p>
 
-  <h3>DOM</h3>
+  <h3 id="dom">DOM</h3>
   <p>
     El Document Object Model es una estructura de árbol que representará todos
     nuestros proyectos web como si un árbol genealógico fuera: padres, hijos,
@@ -120,11 +145,11 @@
     proyecto.
   </p>
   <img
-    src="./images/dom.png"
+    src="/images/dom.png"
     alt="DOM Estrutura de arbol que representa un sitio web"
   />
 
-  <h3>Semántica</h3>
+  <h3 id="semantica" >Semántica</h3>
   <p>
     La semántica le brinda sentido a cada elemento existen en un sitio web,
     algunos elementos será meramente decorativos y no deben significar nada pero
@@ -136,7 +161,7 @@
     personas con habilidades diferentes puedan entender cada contenido.
   </p>
 
-  <h3>Atributos</h3>
+  <h3 id="atributos" >Atributos</h3>
   <p>
     Los atributos le dan características extra a las etiquetas para complementar
     información y son pre programadas por el navegador, algunos atributos
@@ -144,13 +169,21 @@
     atributos funcionan en solo alguna etiquetas como src
   </p>
 
-  <h3>CSS</h3>
-  <P>Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir la presentación de documentos HTML</P>
-  <img src="./images/css.png" alt="Css">
+  <h3 id="css">CSS</h3>
+  <p>
+    Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el
+    lenguaje de estilos utilizado para describir la presentación de documentos
+    HTML
+  </p>
+  <img src="/images/css.png" alt="Css" />
 
   <h3>Modelo de caja</h3>
   <h4>El modelo de caja está compuesto por:</h4>
-  <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.</p>
+  <p>
+    Chrome va a ser el navegador que utilizaremos en el curso por su extenso
+    soporte de nuevos estándares y herramientas de desarrollo avanzadas y de
+    amigable uso.
+  </p>
 
   <ol>
     <li>Tamaño del del contenido / ancho y alto</li>
@@ -165,15 +198,29 @@
     <li>width / height</li>
     <li>margin / margin-top | margin-right | margin-bottom | margin-left</li>
     <li>border / border-top | border-right | border-bottom | border-left</li>
-    <li>padding / padding-top | padding-right | padding-bottom | padding-left</li>
+    <li>
+      padding / padding-top | padding-right | padding-bottom | padding-left
+    </li>
   </ul>
 
   <h3>Propiedades lógicas para el modelo de caja:</h3>
   <ul>
     <li>inline-size / block-size</li>
-    <li>margin-block | margin-inline | margin-block-start | margin-block-end | margin-inline-start | margin-inline-end</li>
-    <li>border-block | border-inline | border-block-start | border-block-end | border-inline-start | border-inline-end</li>
-    <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start | padding-inline-end</li>
+    <li>
+      margin-block | margin-inline | margin-block-start | margin-block-end |
+      margin-inline-start | margin-inline-end
+    </li>
+    <li>
+      border-block | border-inline | border-block-start | border-block-end |
+      border-inline-start | border-inline-end
+    </li>
+    <li>
+      padding-block | padding-inline | padding-block-start | padding-block-end |
+      padding-inline-start | padding-inline-end
+    </li>
   </ul>
-
+  <p>
+    Si tienes alguna pregunta escríbeme a
+    <a href="mailto:jupeto@hotmail.es">jupeto@hotmail.es</a>
+  </p>
 </html>
