Se añadieron los primeros estilos CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h4 style="border: 1px solid red;" >CONTENIDO</h4>
+      <h4>CONTENIDO</h4>
       <nav>
         <details open>
           <summary>Setup</summary>
