Se corrige ruta de imagenes /imgages a ./images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <img
       id="google-chrome"
-      src="/images/google-chrome.png"
+      src="./images/google-chrome.png"
       alt="Logo de Google Chrome"
       title="Logo de Google Chrome"
     />
@@ -61,7 +61,7 @@
 
   <img
     id="visual-code"
-    src="/images/visual-studio-code.png"
+    src="./images/visual-studio-code.png"
     alt="Logo de Visual Studio Code"
     title="Logo de Visual Studio Code"
   />
@@ -75,7 +75,7 @@
 
   <img 
     id="figma"
-    src="/images/figma.png"
+    src="./images/figma.png"
     alt="Logo de Figma"
     title="Logo de Figma" />
   <h3>Figma</h3>
@@ -86,7 +86,7 @@
   </p>
 
   <img id="github"
-    src="/images/github.png"
+    src="./images/github.png"
     alt="Logo de gitHub"
     title="Logo de gitHub" />
   <h3>GitHub</h3>
