Se corrige ruta de imagenes /imgages a ./images de las secciones DOM Y CSS

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     proyecto.
   </p>
   <img
-    src="/images/dom.png"
+    src="./images/dom.png"
     alt="DOM Estrutura de arbol que representa un sitio web"
   />
 
@@ -175,7 +175,7 @@
     lenguaje de estilos utilizado para describir la presentación de documentos
     HTML
   </p>
-  <img src="/images/css.png" alt="Css" />
+  <img src="./images/css.png" alt="Css" />
 
   <h3>Modelo de caja</h3>
   <h4>El modelo de caja está compuesto por:</h4>
