--- a/index.html
+++ b/index.html
@@ -235,6 +235,28 @@
           </ul>
         </section>
 
+        <div class="section-content">
+          <h2>Hola estos son algunos videos</h2>
+          <div class="slider">
+            <scroll-container class="slider-container">
+              <scroll-page class="slider-slide" id="video1">
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </scroll-page>
+              <scroll-page class="slider-slide" id="video2">
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/129HfPylOig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </scroll-page>
+              <scroll-page class="slider-slide" id="video3">
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/VoLSGnj-eUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </scroll-page>
+            </scroll-container>
+            <div class="slider-bullet-list">
+              <a href="#video1" class="slider-bullet"></a>
+              <a href="#video2" class="slider-bullet"></a>
+              <a href="#video3" class="slider-bullet"></a>
+            </div>
+          </div>
+        </div>
+
         <p>
           Si tienes alguna pregunta escríbeme a
           <a href="mailto:jupeto@hotmail.es">jupeto@hotmail.es</a>
