Se añadio formulario newsletter y se corrigio barra de scroll de carrusel

--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
           Si tienes alguna pregunta escríbeme a
           <a href="mailto:jupeto@hotmail.es">jupeto@hotmail.es</a>
         </p>
+
+        <div class="section-content">
+          <h2>Ingresa a nuestro newsletter</h2>
+          <form action="#" class="form">
+            <input type="text" required name="" id="" placeholder="Nombre">
+            <input type="email" required name="" id="" placeholder="Correo Electronico">
+            <input type="submit" value="Suscribirme">
+          </form>
+        </div>
+
   </main>
   </div>
   </div>
