Añadieron los metas

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/styles-logicos.css" />
   <title>El Blog de Junior</title>
+  <meta property="og:title" content="Mi proyecto del curso esencial de html y css" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://rijutope06.github.io/html-css-esencial/" />
+  <meta property="og:image" content="https://rijutope06.github.io/html-css-esencial/images/css.png" />
+  <meta property="og:description" content="Todo lo que necesitas saber en tu día a día como FrontEnd" />
 </head>
 
 <body>
@@ -240,13 +246,22 @@
           <div class="slider">
             <scroll-container class="slider-container">
               <scroll-page class="slider-slide" id="video1">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </scroll-page>
               <scroll-page class="slider-slide" id="video2">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/129HfPylOig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/129HfPylOig"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </scroll-page>
               <scroll-page class="slider-slide" id="video3">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/VoLSGnj-eUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/VoLSGnj-eUM"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </scroll-page>
             </scroll-container>
             <div class="slider-bullet-list">
